--- a/index.html
+++ b/index.html
@@ -71,17 +71,13 @@
         <div class="Bottom">
             <div class="left-content">
                 <div class="status-container">
-                    <div class="status-indicator"></div>
                     <div class="status-text">Nhà hàng đang mở cửa!</div>
                 </div>
                 <p>Trưa: 11h30 - 14h00 | Tối: 17h30 - 21h00</p>
                 <div class="DKN">
-                    <div class="ICT">
-                        <i class="fas fa-exclamation" style="font-size: 150px; color: #f39c12;"></i>
-                    </div>
-                    <div class="DBL">
-                        Đừng bỏ lỡ cơ hội nhận những ưu đãi hấp dẫn từ chúng tôi. Hãy <span style="font-weight: bold;">đăng ký</span> ngay để nhận ngay những phần quà tuyệt vời!
-                    </div>
+                    <button class="DK">
+                        <img src="./IMG/DK.png" alt="" style="width: 100%;">
+                    </button>
                 </div>
                 <div class="DC">
                     <p><span style="font-weight: bold;">Địa chỉ:</span> 123 Trần Đại Nghĩa, phường Hòa Hải, quận Ngũ Hành Sơn, thành phố Đà Nẵng</p>
