--- a/Order.html
+++ b/Order.html
@@ -218,7 +218,39 @@
                 </div>
             </div>
             <div class="BottomRight">
-                BR
+                <div class="BottomLeft">
+                    <div class="VipTop">
+                        <button class="VipTren1"></button>
+                        <button class="Ghe2"></button>
+                        <button class="Ghe2"></button>
+                        <button class="Ghe2"></button>
+                        <button class="Ghe2"></button>
+                        <button class="Ghe2"></button>
+                    </div>
+                    <div class="VipMid">
+                        <div class="VipMidLeft">
+                            <button class="VipTrai1"></button>
+                            <button class="VipTrai2"></button>
+                        </div>
+                        <div class="VipMidMid">
+                            <button class="Vip1">
+                                VIP 1
+                            </button>
+                        </div>
+                        <div class="VipMidRight">
+                            Right
+                        </div>
+    
+                    </div>
+                    <div class="VipBottom">
+                        <button class="VipDuoi1"></button>
+                        <button class="Ghe2"></button>
+                        <button class="Ghe2"></button>
+                        <button class="Ghe2"></button>
+                        <button class="Ghe2"></button>
+                        <button class="Ghe2"></button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
