--- a/Order.html
+++ b/Order.html
@@ -204,7 +204,8 @@
                         </button>
                     </div>
                     <div class="VipMidRight">
-                        Right
+                        <button class="VipTrai1"></button>
+                        <button class="VipTrai2"></button>
                     </div>
 
                 </div>
@@ -238,7 +239,8 @@
                             </button>
                         </div>
                         <div class="VipMidRight">
-                            Right
+                            <button class="VipTrai1"></button>
+                            <button class="VipTrai2"></button>
                         </div>
     
                     </div>
