--- a/menu.html
+++ b/menu.html
@@ -30,83 +30,128 @@
         </Header>
 
         <div class="menu-wrapper">
-            <h1 class="menu-title">Our Menu</h1>
+            <h1 class="menu-title">Menu</h1>
             
             <div class="menu-categories">
                 <div class="category">
-                    <h2>Gà Rán - Fried Chicken</h2>
+                    <h2>Kê Mỹ Vị</h2>
                     <div class="menu-grid">
                         <div class="menu-item">
-                            <img src="./IMG/Menu/menu1.jpg" alt="Gà rán">
+                            <img src="./IMG/Menu/Menu1.jpg" alt="Gà nướng muối ớt">
                             <div class="menu-content">
-                                <h3>Gà Rán Truyền Thống</h3>
-                                <p class="description">Gà rán giòn thơm</p>
-                                <p class="price">59.000đ</p>
+                                <h3>Gà nướng muối ớt</h3>
+                                <p class="description">Thơm! Cay! Bùng vị!</p>
+                                <p class="price">295.000đ</p>
                                 <button class="order-btn">Đặt món</button>
                             </div>
                         </div>
 
                         <div class="menu-item">
-                            <img src="./IMG/Menu/menu2.jpg" alt="Gà sốt cay">
+                            <img src="./IMG/Menu/Menu2.webp" alt="Gà tắm nước sôi">
                             <div class="menu-content">
-                                <h3>Gà Sốt Cay Hàn Quốc</h3>
-                                <p class="description">Cay nồng đậm vị</p>
-                                <p class="price">69.000đ</p>
+                                <h3>Gà tắm nước sôi</h3>
+                                <p class="description">Chuẩn vị gà! Chuẩn vị nhà!</p>
+                                <p class="price">195.000đ</p>
                                 <button class="order-btn">Đặt món</button>
                             </div>
                         </div>
 
                         <div class="menu-item">
-                            <img src="./IMG/Menu/menu3.jpg" alt="Gà không xương">
+                            <img src="./IMG/Menu/Menu3.jpg" alt="Cánh gà chiên mắm">
                             <div class="menu-content">
-                                <h3>Gà Không Xương</h3>
-                                <p class="description">Thịt gà phi lê</p>
-                                <p class="price">49.000đ</p>
+                                <h3>Cánh gà chiên mắm</h3>
+                                <p class="description">Cánh gà giòn giòn, sốt mắm đậm đà, hấp dẫn</p>
+                                <p class="price">95.000đ</p>
                                 <button class="order-btn">Đặt món</button>
                             </div>
                         </div>
 
                         <div class="menu-item">
-                            <img src="./IMG/Menu/menu4.jpg" alt="Gà sốt BBQ">
+                            <img src="./IMG/Menu/Menu4.jpg" alt="Gà tìm măng">
                             <div class="menu-content">
-                                <h3>Gà Sốt BBQ</h3>
-                                <p class="description">Vị ngọt đậm đà</p>
-                                <p class="price">65.000đ</p>
-                                <button class="order-btn">Đặt món</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="category">
-                    <h2>Combo Ưu Đãi</h2>
-                    <div class="menu-grid">
-                        <div class="menu-item">
-                            <img src="./IMG/Menu/combo1.jpg" alt="Combo gia đình">
-                            <div class="menu-content">
-                                <h3>Combo Gia Đình</h3>
-                                <p class="description">6 miếng gà + 2 khoai tây + 2 pepsi</p>
-                                <p class="price">199.000đ</p>
+                                <h3>Gà tìm măng</h3>
+                                <p class="description">Sự kết hợp hoàn hảo giữa gà và măng chua</p>
+                                <p class="price">205.000đ</p>
                                 <button class="order-btn">Đặt món</button>
                             </div>
                         </div>
 
                         <div class="menu-item">
-                            <img src="./IMG/Menu/combo2.jpg" alt="Combo đôi">
+                            <img src="./IMG/Menu/Menu5.jpg" alt="Mẹt gà">
                             <div class="menu-content">
-                                <h3>Combo Đôi</h3>
-                                <p class="description">3 miếng gà + khoai tây + 2 pepsi</p>
-                                <p class="price">119.000đ</p>
+                                <h3>Mẹt gà</h3>
+                                <p class="description">Mẹt gà với các món ăn kèm tạo nên mỹ vị</p>
+                                <p class="price">375.000đ</p>
                                 <button class="order-btn">Đặt món</button>
                             </div>
                         </div>
 
                         <div class="menu-item">
-                            <img src="./IMG/Menu/combo3.jpg" alt="Combo nhóm">
+                            <img src="./IMG/Menu/Menu6.webp" alt="Gà bóp chanh">
                             <div class="menu-content">
-                                <h3>Combo Nhóm</h3>
-                                <p class="description">9 miếng gà + 3 khoai tây + 3 pepsi</p>
-                                <p class="price">299.000đ</p>
+                                <h3>Gà bóp chanh</h3>
+                                <p class="description">Thịt gà săn chắc, nước sốt đậm đà</p>
+                                <p class="price">50.000đ</p>
+                                <button class="order-btn">Đặt món</button>
+                            </div>
+                        </div>
+
+                        <div class="menu-item">
+                            <img src="./IMG/Menu/Menu7.webp" alt="Gà hầm khoai tây">
+                            <div class="menu-content">
+                                <h3>Gà hầm khoai tây</h3>
+                                <p class="description">Sự lựa chọn tuyệt vời cho các bữa cơm gia đình</p>
+                                <p class="price">100.000đ</p>
+                                <button class="order-btn">Đặt món</button>
+                            </div>
+                        </div>
+
+                        <div class="menu-item">
+                            <img src="./IMG/Menu/Menu8.jpg" alt="Gà hấp cải thìa">
+                            <div class="menu-content">
+                                <h3>Gà hấp cải thìa</h3>
+                                <p class="description">Thơm mềm! Béo ngậy!</p>
+                                <p class="price">75.000đ</p>
+                                <button class="order-btn">Đặt món</button>
+                            </div>
+                        </div>
+
+                        <div class="menu-item">
+                            <img src="./IMG/Menu/Menu9.jpg" alt="Phở gà">
+                            <div class="menu-content">
+                                <h3>Phở gà</h3>
+                                <p class="description">Vị phở đặc trưng từ gạo ST25 kết hợp với gà thả vườn chắc thịt</p>
+                                <p class="price">35.000đ</p>
+                                <button class="order-btn">Đặt món</button>
+                            </div>
+                        </div>
+
+                        <div class="menu-item">
+                            <img src="./IMG/Menu/Menu10.webp" alt="Gà đen Tây Bắc">
+                            <div class="menu-content">
+                                <h3>Gà đen Tây Bắc</h3>
+                                <p class="description">Món gà thơm ngon, bổ dưỡng từ vùng núi Tây Bắc</p>
+                                <p class="price">135.000đ</p>
+                                <button class="order-btn">Đặt món</button>
+                            </div>
+                        </div>
+
+                        <div class="menu-item">
+                            <img src="./IMG/Menu/Menu11.webp" alt="Gà đen nướng">
+                            <div class="menu-content">
+                                <h3>Gà đen nướng</h3>
+                                <p class="description">Sự kết hợp giữa những dinh dưỡng từ gà đen và sự thơm ngon từ món nướng</p>
+                                <p class="price">225.000đ</p>
+                                <button class="order-btn">Đặt món</button>
+                            </div>
+                        </div>
+
+                        <div class="menu-item">
+                            <img src="./IMG/Menu/Menu13.jpg" alt="Gà ác tiềm thuốc Bắc">
+                            <div class="menu-content">
+                                <h3>Gà ác tiềm thuốc Bắc</h3>
+                                <p class="description">Món ăn có xuất xứ từ người Hoa nhưng từ lâu đã trở thành món ngon quen thuộc tại Việt Nam</p>
+                                <p class="price">155.000đ</p>
                                 <button class="order-btn">Đặt món</button>
                             </div>
                         </div>
@@ -117,31 +162,31 @@
                     <h2>Món Ăn Kèm</h2>
                     <div class="menu-grid">
                         <div class="menu-item">
-                            <img src="./IMG/Menu/side1.jpg" alt="Khoai tây chiên">
+                            <img src="./IMG/Menu/Menu14.jpg" alt="Cơm trắng">
                             <div class="menu-content">
-                                <h3>Khoai Tây Chiên</h3>
-                                <p class="description">Giòn rụm</p>
-                                <p class="price">29.000đ</p>
+                                <h3>Cơm trắng</h3>
+                                <p class="description">Cơm dẻo, thơm từ gạo ST25</p>
+                                <p class="price">30.000đ</p>
                                 <button class="order-btn">Đặt món</button>
                             </div>
                         </div>
 
                         <div class="menu-item">
-                            <img src="./IMG/Menu/side2.jpg" alt="Salad">
+                            <img src="./IMG/Menu/Menu15.jpg" alt="Salad">
                             <div class="menu-content">
                                 <h3>Salad Trộn</h3>
                                 <p class="description">Rau tươi</p>
-                                <p class="price">25.000đ</p>
+                                <p class="price">30.000đ</p>
                                 <button class="order-btn">Đặt món</button>
                             </div>
                         </div>
 
                         <div class="menu-item">
-                            <img src="./IMG/Menu/side3.jpg" alt="Cơm">
+                            <img src="./IMG/Menu/Menu16.jpg" alt="Đồ chua">
                             <div class="menu-content">
-                                <h3>Cơm Trắng</h3>
-                                <p class="description">Cơm dẻo thơm</p>
-                                <p class="price">15.000đ</p>
+                                <h3>Đồ chua</h3>
+                                <p class="description">Sự lựa chọn chống ngấy tuyệt vời</p>
+                                <p class="price">25.000đ</p>
                                 <button class="order-btn">Đặt món</button>
                             </div>
                         </div>
@@ -152,31 +197,31 @@
                     <h2>Đồ Uống</h2>
                     <div class="menu-grid">
                         <div class="menu-item">
-                            <img src="./IMG/Menu/drink1.jpg" alt="Pepsi">
+                            <img src="./IMG/Menu/Menu17.jpg" alt="Đồ uống đóng lon">
                             <div class="menu-content">
-                                <h3>Pepsi</h3>
+                                <h3>Đồ uống đóng lon</h3>
                                 <p class="description">Lon 330ml</p>
-                                <p class="price">15.000đ</p>
+                                <p class="price">10.000đ</p>
                                 <button class="order-btn">Đặt món</button>
                             </div>
                         </div>
 
                         <div class="menu-item">
-                            <img src="./IMG/Menu/drink2.jpg" alt="7Up">
+                            <img src="./IMG/Menu/Menu18.png" alt="Bia">
                             <div class="menu-content">
-                                <h3>7 Up</h3>
+                                <h3>Bia</h3>
                                 <p class="description">Lon 330ml</p>
-                                <p class="price">15.000đ</p>
+                                <p class="price">15.000đ - 20.000đ</p>
                                 <button class="order-btn">Đặt món</button>
                             </div>
                         </div>
 
                         <div class="menu-item">
-                            <img src="./IMG/Menu/drink3.jpg" alt="Trà đào">
+                            <img src="./IMG/Menu/Menu19.jpg" alt="Rượu Soju">
                             <div class="menu-content">
-                                <h3>Trà Đào</h3>
-                                <p class="description">Tươi mát</p>
-                                <p class="price">25.000đ</p>
+                                <h3>Rượu Soju</h3>
+                                <p class="description">360ml</p>
+                                <p class="price">86.000đ</p>
                                 <button class="order-btn">Đặt món</button>
                             </div>
                         </div>
