--- a/policy.html
+++ b/policy.html
@@ -17,10 +17,10 @@
     
             <div class="Menu">
                 <nav class="navMenu">
-                    <a href="">Home</a>
-                    <a href="">Order</a>
-                    <a href="">Menu</a>
-                    <a href="">Policy</a>
+                    <a href="./index.html">Home</a>
+                    <a href="./order.html">Order</a>
+                    <a href="./menu.html">Menu</a>
+                    <a href="./policy.html">Policy</a>
                 </nav>
             </div>
     
