--- a/Order.html
+++ b/Order.html
@@ -13,7 +13,7 @@
     <div class="container">
         <Header class="HD">
             <div class="Name">
-                <a href="" class="CD">Chicken Duno</a>
+                <a href="./index.html" class="CD">Chicken Duno</a>
             </div>
     
             <div class="Menu">
@@ -38,7 +38,7 @@
         
         <div class="TotalTop">
             <div class="TopL">
-                <div class="Cong">Cổng</div>
+                <div class="Cong"></div>
             </div>
             <div class="Top">
                 <div class="TotalLeft">
