--- a/policy.html
+++ b/policy.html
@@ -12,7 +12,7 @@
     <div class="container">
         <Header class="HD">
             <div class="Name">
-                <a href="" class="CD">Chicken Duno</a>
+                <a href="./index.html" class="CD">Chicken Duno</a>
             </div>
     
             <div class="Menu">
