--- a/menu.html
+++ b/menu.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="./css/order.css">
     <link rel="stylesheet" href="./css/menu.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <Header class="HD">
+        <Header class="HD" data-aos="fade-down" data-aos-duration="1000">
             <div class="Name">
                 <a href="./index.html" class="CD">Chicken Duno</a>
             </div>
@@ -31,10 +32,10 @@
 
         <div class="menu-wrapper">
             <div class="menu-categories">
-                <div class="category">
-                    <h2>Kê Mỹ Vị</h2>
+                <div class="category" data-aos="fade-up">
+                    <h2 data-aos="fade-right" data-aos-delay="100">Kê Mỹ Vị</h2>
                     <div class="menu-grid">
-                        <div class="menu-item">
+                        <div class="menu-item" data-aos="zoom-in" data-aos-delay="100">
                             <img src="./IMG/Menu/Menu1.jpg" alt="Gà nướng muối ớt">
                             <div class="menu-content">
                                 <h3>Gà nướng muối ớt</h3>
@@ -44,7 +45,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-item">
+                        <div class="menu-item" data-aos="zoom-in" data-aos-delay="200">
                             <img src="./IMG/Menu/Menu2.webp" alt="Gà tắm nước sôi">
                             <div class="menu-content">
                                 <h3>Gà tắm nước sôi</h3>
@@ -54,7 +55,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-item">
+                        <div class="menu-item" data-aos="zoom-in" data-aos-delay="300">
                             <img src="./IMG/Menu/Menu3.jpg" alt="Cánh gà chiên mắm">
                             <div class="menu-content">
                                 <h3>Cánh gà chiên mắm</h3>
@@ -64,7 +65,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-item">
+                        <div class="menu-item" data-aos="zoom-in" data-aos-delay="400">
                             <img src="./IMG/Menu/Menu4.jpg" alt="Gà tìm măng">
                             <div class="menu-content">
                                 <h3>Gà tìm măng</h3>
@@ -74,7 +75,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-item">
+                        <div class="menu-item" data-aos="zoom-in" data-aos-delay="100">
                             <img src="./IMG/Menu/Menu5.jpg" alt="Mẹt gà">
                             <div class="menu-content">
                                 <h3>Mẹt gà</h3>
@@ -84,7 +85,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-item">
+                        <div class="menu-item" data-aos="zoom-in" data-aos-delay="200">
                             <img src="./IMG/Menu/Menu6.webp" alt="Gà bóp chanh">
                             <div class="menu-content">
                                 <h3>Gà bóp chanh</h3>
@@ -94,7 +95,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-item">
+                        <div class="menu-item" data-aos="zoom-in" data-aos-delay="300">
                             <img src="./IMG/Menu/Menu7.webp" alt="Gà hầm khoai tây">
                             <div class="menu-content">
                                 <h3>Gà hầm khoai tây</h3>
@@ -104,7 +105,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-item">
+                        <div class="menu-item" data-aos="zoom-in" data-aos-delay="400">
                             <img src="./IMG/Menu/Menu8.jpg" alt="Gà hấp cải thìa">
                             <div class="menu-content">
                                 <h3>Gà hấp cải thìa</h3>
@@ -114,7 +115,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-item">
+                        <div class="menu-item" data-aos="zoom-in" data-aos-delay="100">
                             <img src="./IMG/Menu/Menu9.jpg" alt="Phở gà">
                             <div class="menu-content">
                                 <h3>Phở gà</h3>
@@ -124,7 +125,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-item">
+                        <div class="menu-item" data-aos="zoom-in" data-aos-delay="200">
                             <img src="./IMG/Menu/Menu10.webp" alt="Gà đen Tây Bắc">
                             <div class="menu-content">
                                 <h3>Gà đen Tây Bắc</h3>
@@ -134,7 +135,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-item">
+                        <div class="menu-item" data-aos="zoom-in" data-aos-delay="300">
                             <img src="./IMG/Menu/Menu11.webp" alt="Gà đen nướng">
                             <div class="menu-content">
                                 <h3>Gà đen nướng</h3>
@@ -144,7 +145,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-item">
+                        <div class="menu-item" data-aos="zoom-in" data-aos-delay="400">
                             <img src="./IMG/Menu/Menu13.jpg" alt="Gà ác tiềm thuốc Bắc">
                             <div class="menu-content">
                                 <h3>Gà ác tiềm thuốc Bắc</h3>
@@ -156,10 +157,10 @@
                     </div>
                 </div>
 
-                <div class="category">
-                    <h2>Món Ăn Kèm</h2>
+                <div class="category" data-aos="fade-up">
+                    <h2 data-aos="fade-right" data-aos-delay="100">Món Ăn Kèm</h2>
                     <div class="menu-grid">
-                        <div class="menu-item">
+                        <div class="menu-item" data-aos="zoom-in" data-aos-delay="100">
                             <img src="./IMG/Menu/Menu14.jpg" alt="Cơm trắng">
                             <div class="menu-content">
                                 <h3>Cơm trắng</h3>
@@ -169,7 +170,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-item">
+                        <div class="menu-item" data-aos="zoom-in" data-aos-delay="200">
                             <img src="./IMG/Menu/Menu15.jpg" alt="Salad">
                             <div class="menu-content">
                                 <h3>Salad Trộn</h3>
@@ -179,7 +180,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-item">
+                        <div class="menu-item" data-aos="zoom-in" data-aos-delay="300">
                             <img src="./IMG/Menu/Menu16.jpg" alt="Đồ chua">
                             <div class="menu-content">
                                 <h3>Đồ chua</h3>
@@ -191,10 +192,10 @@
                     </div>
                 </div>
 
-                <div class="category">
-                    <h2>Đồ Uống</h2>
+                <div class="category" data-aos="fade-up">
+                    <h2 data-aos="fade-right" data-aos-delay="100">Đồ Uống</h2>
                     <div class="menu-grid">
-                        <div class="menu-item">
+                        <div class="menu-item" data-aos="zoom-in" data-aos-delay="100">
                             <img src="./IMG/Menu/Menu17.jpg" alt="Đồ uống đóng lon">
                             <div class="menu-content">
                                 <h3>Đồ uống đóng lon</h3>
@@ -204,7 +205,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-item">
+                        <div class="menu-item" data-aos="zoom-in" data-aos-delay="200">
                             <img src="./IMG/Menu/Menu18.png" alt="Bia">
                             <div class="menu-content">
                                 <h3>Bia</h3>
@@ -214,7 +215,7 @@
                             </div>
                         </div>
 
-                        <div class="menu-item">
+                        <div class="menu-item" data-aos="zoom-in" data-aos-delay="300">
                             <img src="./IMG/Menu/Menu19.jpg" alt="Rượu Soju">
                             <div class="menu-content">
                                 <h3>Rượu Soju</h3>
@@ -228,5 +229,15 @@
             </div>
         </div>
     </div>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            duration: 800,
+            easing: 'ease-in-out',
+            once: true,
+            offset: 50
+        });
+    </script>
 </body>
 </html>
