--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         
                 <div class="Menu">
                     <nav class="navMenu">
-                        <a href="./index.html" style="text-decoration: underline; opacity: 1;;">Home</a>
+                        <a href="./index.html" style="text-decoration: underline; opacity: 1;">Home</a>
                         <a href="./order.html">Order</a>
                         <a href="./menu.html">Menu</a>
                         <a href="./policy.html">Policy</a>
