--- a/order.html
+++ b/order.html
@@ -21,7 +21,7 @@
                 <div class="Menu">
                     <nav class="navMenu">
                         <a href="./index.html">Home</a>
-                        <a href="./order.html">Order</a>
+                        <a href="./order.html" style="text-decoration: underline; opacity: 1;">Order</a>
                         <a href="./menu.html">Menu</a>
                         <a href="./policy.html">Policy</a>
                     </nav>
