--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
                     <p><i class="fas fa-map-marker-alt"></i> <span style="font-weight: bold;">Địa chỉ:</span> 123 Trần Đại Nghĩa, phường Hòa Hải, quận Ngũ Hành Sơn, thành phố Đà Nẵng</p>
                 </div>
             </div>
-            <div class="contact-info">
+            <div class="bottom-right">
+                <div class="contact-info">
                     <h3>Liên hệ với chúng tôi</h3>
                     <div class="contact-item">
                         <i class="fas fa-phone"></i>
@@ -99,6 +100,7 @@
                         <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
                         <a href="#" class="social-link"><i class="fab fa-tiktok"></i></a>
                     </div>
+            </div>
             </div>
         </div>
     </div>
