--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
                 <div class="Menu">
                     <nav class="navMenu">
                         <a href="./index.html" style="text-decoration: underline; opacity: 1;">Home</a>
-                        <a href="./order.html">Order</a>
                         <a href="./menu.html">Menu</a>
                         <a href="./policy.html">Policy</a>
                     </nav>
@@ -67,7 +66,7 @@
                 <img src="IMG/Menu/Menu12.webp" alt="" class="GaRanIMG">
                 <img src="IMG/Menu/Menu13.jpg" alt="" class="GaRanIMG">
             </div>
-            <div>
+            <div class="GaRanIMG">
                 <a href="">
                     <p class="Ga" style="color: black;">Click me!</p>
                     <img src="./IMG/Ga2.png" alt="" class="Ga">
