--- a/login.html
+++ b/login.html
@@ -23,6 +23,22 @@
                 </nav>
             </div>
         </Header>
+        <button class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
+
+        <div class="mobile-menu">
+            <nav class="navMenu">
+                <a href="./index.html">Home</a>
+                <a href="./menu.html">Menu</a>
+                <a href="./policy.html">Policy</a>
+                <a href="./login.html" class="mobile-login">Login In <i class="fas fa-user"></i></a>
+            </nav>
+        </div>
+
+        <div class="menu-overlay"></div>
 
         <div class="login-container">
             <div class="form-container">
@@ -50,7 +66,7 @@
             </div> 
         </div>
     </div>
-
+    <script src="./js/hamburger.js"></script>
     <!-- <script src="./js/login.js"></script> -->
 </body>
 </html>
