--- a/login.html
+++ b/login.html
@@ -17,7 +17,6 @@
             <div class="Menu">
                 <nav class="navMenu">
                     <a href="./index.html">Home</a>
-                    <a href="./order.html">Order</a>
                     <a href="./menu.html">Menu</a>
                     <a href="./policy.html">Policy</a>
                 </nav>
@@ -34,11 +33,40 @@
                 <a href="./index.html">Home</a>
                 <a href="./menu.html">Menu</a>
                 <a href="./policy.html">Policy</a>
-                <a href="./login.html" class="mobile-login">Login In <i class="fas fa-user"></i></a>
             </nav>
         </div>
 
         <div class="menu-overlay"></div>
+
+        <div class="Login">
+            <div class="user-profile">
+                <a href="#" class="profile-trigger">
+                    <span class="username">Username</span>
+                    <i class="fas fa-user"></i>
+                </a>
+                <div class="profile-dropdown">
+                    <div class="profile-info">
+                        <div class="member-tier">
+                            <i class="fas fa-crown"></i>
+                            <span>Hạng: Thành viên Đồng</span>
+                        </div>
+                        <div class="points">
+                            <i class="fas fa-star"></i>
+                            <span>Điểm tích lũy: 0</span>
+                        </div>
+                        <div class="total-spent">
+                            <i class="fas fa-coins"></i>
+                            <span>Tổng chi tiêu: 0đ</span>
+                        </div>
+                    </div>
+                    <div class="dropdown-divider"></div>
+                    <a href="#" class="logout-btn">
+                        <i class="fas fa-sign-out-alt"></i>
+                        Đăng xuất
+                    </a>
+                </div>
+            </div>
+        </div>
 
         <div class="login-container">
             <div class="form-container">
@@ -67,6 +95,6 @@
         </div>
     </div>
     <script src="./js/hamburger.js"></script>
-    <!-- <script src="./js/login.js"></script> -->
+    <script src="./js/login.js"></script>
 </body>
 </html>
