--- a/policy.html
+++ b/policy.html
@@ -25,7 +25,7 @@
                 </div>
         
                 <div class="Login">
-                    <a href="./login.html" class="LG"> Login In <i class="fas fa-user"></i></a>
+                    <a href="./login.html" class="LG"> Log In <i class="fas fa-user"></i></a>
                 </div>
             </Header>
             <button class="hamburger">
@@ -39,7 +39,7 @@
                     <a href="./index.html">Home</a>
                     <a href="./menu.html">Menu</a>
                     <a href="./policy.html">Policy</a>
-                    <a href="./login.html" class="mobile-login">Login In <i class="fas fa-user"></i></a>
+                    <a href="./login.html" class="mobile-login">Log In <i class="fas fa-user"></i></a>
                 </nav>
             </div>
     
@@ -115,7 +115,7 @@
                     <div class="offer-card">
                         <i class="fas fa-birthday-cake"></i>
                         <h3>Ưu Đãi Sinh Nhật</h3>
-                        <p>Tặng món tráng miệng đặc biệt và giảm thêm 10% trong tuần sinh nhật</p>
+                        <p>Tặng món tráng miệng đặc biệt và giảm thêm 10% trong ngày sinh nhật</p>
                     </div>
 
                     <div class="offer-card">
@@ -127,12 +127,13 @@
                     <div class="offer-card">
                         <i class="fas fa-clock"></i>
                         <h3>Giờ Vàng</h3>
-                        <p>Giảm 20% từ 14:00 - 17:00 các ngày trong tuần</p>
+                        <p>Giảm 10% từ 14:00 - 17:00 các ngày trong tuần</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <script src="./js/hamburger.js"></script>
+    <script src="./js/checkLogin.js"></script>
 </body>
 </html>
