--- a/register.html
+++ b/register.html
@@ -52,11 +52,6 @@
                         </div>
 
                         <div class="input-box">
-                            <i class="fas fa-user"></i>
-                            <input type="text" placeholder="Họ" required>
-                        </div>
-
-                        <div class="input-box">
                             <i class="fas fa-envelope"></i>
                             <input type="email" placeholder="Email" required>
                         </div>
@@ -111,5 +106,6 @@
         </div>
     </div>
     <script src="./js/hamburger.js"></script>
+    <script src="./js/register.js"></script>
 </body>
 </html>
