--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <img src="IMG/Menu/Menu13.jpg" alt="" class="GaRanIMG">
             </div>
             <div class="GaRanIMG">
-                <a href="">
+                <a href="./menu.html">
                     <p class="Ga" style="color: black;">Click me!</p>
                     <img src="./IMG/Ga2.png" alt="" class="Ga">
                 </a>
