--- a/menu.html
+++ b/menu.html
@@ -304,7 +304,7 @@
                             <div class="menu-content">
                                 <h3>Bia</h3>
                                 <p class="description">Lon 330ml</p>
-                                <p class="price">15.000đ - 20.000đ</p>
+                                <p class="price">17.000đ</p>
                                 <div class="order-controls">
                                     <button class="quantity-btn minus">-</button>
                                     <span class="quantity">0</span>
